# teamcity_log_substitution

./: .gitignore  CMakeLists.txt  README.md  tclog_sed.cpp
